# tiles

./: .gitignore  README.md  Taskfile.yml  cabal.project  flake.nix  hie.yaml  tiles.cabal
bench/: Main.hs
lib/Tiles/: Action.hs  Common.hs  Game.hs  Grid.hs  Modifiers.hs  TUI.hs  Tiles.hs  Types.hs  Validation.hs
lib/Tiles/Utils/: Default.hs  Helpers.hs  OneOfN.hs  Random.hs  Terminal.hs
src/: Main.hs
test/: Spec.hs
